--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-solid": "^2.2.5"
   },
   "dependencies": {
+    "solid-app-router": "^0.2.1",
     "solid-icons": "^0.3.3",
     "solid-js": "^1.3.3"
   }
