--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "vite-plugin-solid": "^2.2.5"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.30.0",
     "solid-app-router": "^0.2.1",
     "solid-icons": "^0.3.3",
-    "solid-js": "^1.3.3"
+    "solid-js": "^1.3.3",
+    "solid-js-form": "^0.1.5"
   }
 }
