--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.30.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "add": "^2.0.6",
+    "classnames": "^2.3.1",
     "solid-app-router": "^0.2.1",
     "solid-icons": "^0.3.3",
     "solid-js": "^1.3.3",
-    "solid-js-form": "^0.1.5"
+    "solid-js-form": "^0.1.5",
+    "yarn": "^1.22.17"
   }
 }
