--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "add": "^2.0.6",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "solid-app-router": "^0.2.1",
     "solid-icons": "^0.3.3",
     "solid-js": "^1.3.3",
