--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.30.0",
     "@tailwindcss/forms": "^0.4.0",
+    "@urql/core": "^2.4.2",
     "add": "^2.0.6",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "graphql": "^16.3.0",
     "solid-app-router": "^0.2.1",
     "solid-icons": "^0.3.3",
     "solid-js": "^1.3.3",
     "solid-js-form": "^0.1.5",
+    "solid-urql": "^0.2.0",
     "yarn": "^1.22.17"
   }
 }
