--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "vite-plugin-solid": "^2.2.5"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.23.0",
     "@supabase/supabase-js": "^1.30.0",
     "@tailwindcss/forms": "^0.4.0",
     "@urql/core": "^2.4.2",
-    "add": "^2.0.6",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "graphql": "^16.3.0",
