--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "solid-icons": "^0.3.3",
     "solid-js": "^1.3.3",
     "solid-js-form": "^0.1.5",
-    "solid-urql": "^0.2.0"
+    "solid-urql": "^0.2.0",
+    "yup-password": "^0.2.2"
   }
 }
