--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 VITE_SUPABASE_KEY=eyJXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 VITE_SUPABASE_URL=https://xxxxxxxxxxxxxxxxxxx.supabase.co
+GQL_URL=https://xxxxxx
