--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
+  "name": "warroom-frontend",
+  "version": "0.0.1",
+  "description": "War Room makes incident management stress free",
   "scripts": {
     "start": "vite",
     "dev": "vite",
