--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "solid-icons": "^0.3.3",
     "solid-js": "^1.3.3",
     "solid-urql": "^0.2.0",
+    "yup": "^0.32.11",
     "yup-password": "^0.2.2"
   }
 }
